--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
       <ul type="none">
         <li><a href="https://chrstblnicole.github.io/PROJECT_2/">Project 2: Crush, Supermarket, California by Jan-Henry Gray</a></li>
       </ul>
+        
+        
+      <h4>Project 3: PLAY</h4>
+      <ul type="none">
+        <li><a href="https://docs.google.com/document/d/1KxGXm55kFXJpnvy4_PXaxAf-PAPZC5qPlBwEpGtWLFc/edit?usp=sharing">Reading Response</a></li>
+        <li><a href="https://docs.google.com/presentation/d/1Icz7-VU5BgqOMRZtb-w9F8_LiBI0Avh339SHLgL35Ko/edit?usp=sharing">Ideas</a></li>
+        <li><a href="https://chrstblnicole.github.io/musicplayer_prj3/">Music Player: 23 Songs</a></li>
+      </ul>
 
       </div>
 
